syntax = "proto3";
package prismfinance.prismcore.treasury;

import "gogoproto/gogo.proto";

option go_package = "github.com/prism-finance/prism-core/x/treasury/types";

message EventTreasuryCollectFee {
  string fee_type = 1;
  string amount = 2;
  string from = 3;
}

message EventDistributeFeeToCommunity{
  string fee_coins = 1;
}

message EventSetAction{
  string action_type = 1;
  string occurrence = 2;
  string duration = 3;
  string period = 4;
}

message EventUpdateActionOccurrence{
  string occurrence = 5;
}
